--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+input:-webkit-autofill {
+  -webkit-text-fill-color: theme("colors.white") !important;
+}
+
